--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash": "4.17.4",
     "minimist": "1.2.0",
     "moment": "2.17.1",
+    "nunjucks": "3.0.0",
     "socket.io": "1.7.3",
     "through2": "2.0.3"
   },
